fix: letter spacing too short

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,6 @@
 
 .font-secundary{
   font-family: 'Inter', sans-serif;
-  letter-spacing: -3px;
 }
 
 body {
